--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -2,6 +2,8 @@ PORT = 4000
 NODE_ENV = DEVELOPMENT MODE
 DB_LOCAL_URI = mongodb://localhost:27017/softshop
 
+FORNTEND_URL = "http://localhost:3000"
+
 JWT_SECRET= jfkljdsf9385klj4045nglfs;
 JWT_EXPIRES_TIME=7d
 COOKIE_EPXIRES_TIME= 7
@@ -9,7 +11,7 @@ COOKIE_EPXIRES_TIME= 7
 
 CLOUDINARY_CLOUD_NAME = softshop
 CLOUDINARY_API_KEY = 713675396271632
-CLOUDINARY_API_SERCRET = GfCFKKhGlfO_XCYjLaunQrjV4ag
+CLOUDINARY_API_SECRET = GfCFKKhGlfO_XCYjLaunQrjV4ag
 
 
 SMTP_HOST = smtp.mailtrap.io 
